--- a/TMT/app/src/main/res/layout/activity_main.xml
+++ b/TMT/app/src/main/res/layout/activity_main.xml
@@ -109,4 +109,20 @@
         app:layout_constraintVertical_bias="0.38" />
 
 
+    <com.github.mikephil.charting.charts.PieChart
+        android:id="@+id/chart"
+        android:layout_width="374dp"
+        android:layout_height="389dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.479"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.076" />
+
+
 </android.support.constraint.ConstraintLayout>
